Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-12129

text eliding does not work correctly when a section's width is larger than the last visible line

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 5.12.0 Alpha
    • 4.6.3
    • Widgets: Itemviews
    • None
    • 5712c62d1cfdcf56c772d8a63d52ad58945f194c

      The text eliding in an itemview does not work correctly if the width of an item is greater than the last line that would be shown for an index.
      For example if the width of a section is 50 pixels and the last visible line (due to constraints on the height) is shorter than that then it will not ellide correctly.

        1. main.cpp
          1 kB
        2. Screenshot_1.png
          Screenshot_1.png
          5 kB
        For Gerrit Dashboard: QTBUG-12129
        # Subject Branch Project Status CR V

            chehrlic Christian Ehrlicher
            bholm Benedikte Holm (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes